--- a/app/views/data_explorer/dimensional/_group_chooser.html.erb
+++ b/app/views/data_explorer/dimensional/_group_chooser.html.erb
@@ -17,7 +17,7 @@
       <option
         data-dimension-type="<%= dimension_def["Type"] %>"
         value="<%= dim_key %>"
-        <%= select_eq params["group.#{group_num}"] == dim_key %>>
+        <%= select_eq group&.dimension == dimension_name.to_sym %>>
         <%= prop_or_dim_label(dimension_name) %>
       </option>
     <% end %>
