--- a/app/views/data_explorer/_highlight_chooser.html.erb
+++ b/app/views/data_explorer/_highlight_chooser.html.erb
@@ -32,7 +32,8 @@
     <option value="data-dx-metric,data-dx-group-1-member-descriptor">Amongst group 1</option>
     <option value="data-dx-metric,data-dx-group-2-member-descriptor">Amongst group 2</option>
     <option value="data-dx-metric,data-dx-interval-descriptor">Amongst interval</option>
-    <option value="delta,data-dx-metric,data-dx-group-1-member-descriptor">Group 1 over time</option>
+    <option value="data-dx-metric,data-dx-interval-descriptor,data-dx-comparison-rewind">Amongst interval and comparison</option>
+    <option value="delta,data-dx-metric,data-dx-group-1-member-descriptor">Group 1 over time (busted with any comparisons or 2 groups)</option>
     <option value="delta,data-dx-metric,data-dx-group-1-member-descriptor,data-dx-group-2-member-descriptor">Group 1+2 over time</option>
   </select>
 </fieldset>
