Fix HTML attribute name

--- a/app/views/data_explorer/dimensional/results/table/_40_group_row.html.erb
+++ b/app/views/data_explorer/dimensional/results/table/_40_group_row.html.erb
@@ -75,7 +75,7 @@
         data-dx-metric="<%= metric.metric %>"
         data-dx-group-1-member-descriptor="<%= group_1_member_descriptor || "__nil__" %>"
         data-dx-group-2-member-descriptor="<%= group_2_member_descriptor || "__nil__" %>"
-        data-dx-data_point="<%= value %>"
+        data-dx-data-point="<%= value %>"
         title="<%= title %>">
 
         <%= number_with_delimiter(value) %>
