--- a/app/views/data_explorer/_range_chooser.html.erb
+++ b/app/views/data_explorer/_range_chooser.html.erb
@@ -1,7 +1,7 @@
 <script>
   document.addEventListener("DOMContentLoaded", (event) => {
     const now = new Date();
-    if (now.getDate() !== now.getUTCDate) {
+    if (now.getDate() !== now.getUTCDate()) {
       document.getElementById("utc-midnight-warning").innerText = `Dovetail Insights uses the UTC/GMT time zone for all data and calculations. Please be aware that currently the date in your local time zone and the UTC time zone DO NOT MATCH. So while for you it is currently the ${now.getDate()}th, for Insights it is currently the ${now.getUTCDate()}th.`;
     }
   });
