Clean up variable names

--- a/app/views/data_explorer/dimensional/results/table/_10_group_headers.html.erb
+++ b/app/views/data_explorer/dimensional/results/table/_10_group_headers.html.erb
@@ -1,8 +1,8 @@
 <tr>
   <%= tag.td if @tbl_show_group_1_headers %>
 
-  <% @meta&.each do |meta| %>
-    <td><%= prop_or_dim_label(meta) %></td>
+  <% @meta&.each do |meta_field_name| %>
+    <td><%= prop_or_dim_label(meta_field_name) %></td>
   <% end %>
 
   <% if @tbl_show_group_1_totals %>
