--- a/app/views/data_explorer/dimensional/results/table/_20_metric_headers.html.erb
+++ b/app/views/data_explorer/dimensional/results/table/_20_metric_headers.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <%= tag.td if @tbl_show_group_1_headers %>
 
-  <% @meta&.each do |meta| %>
+  <% @meta&.each do %>
     <td></td>
   <% end %>
 
