--- a/app/views/data_explorer/index.html.erb
+++ b/app/views/data_explorer/index.html.erb
@@ -27,9 +27,9 @@
     <div id="lens-data-parameters">
       <%= render partial: "data_explorer/time_series/granularity_chooser", locals: {form: form} if @composition.is_a? Compositions::TimeSeriesComposition %>
 
-      <%= render partial: "data_explorer/dimensional/metrics_chooser" if @composition.is_a? Compositions::DimensionalComposition %>
+      <%= render partial: "data_explorer/dimensional/metrics_chooser" if @composition.is_a?(Compositions::DimensionalComposition) || @composition.is_a?(Compositions::CumeComposition) %>
 
-      <%= render partial: "data_explorer/dimensional/groups_panel" if @composition.is_a? Compositions::DimensionalComposition %>
+      <%= render partial: "data_explorer/dimensional/groups_panel" if @composition.is_a?(Compositions::DimensionalComposition) || @composition.is_a?(Compositions::CumeComposition) %>
 
       <%= render partial: "data_explorer/time_series/comparison_chooser", locals: {form: form} if @composition.is_a? Compositions::TimeSeriesComposition %>
 
@@ -45,7 +45,7 @@
         <% elsif @composition.lens == "timeSeries" %>
           <%= render "data_explorer/time_series/results" %>
         <% elsif @composition.lens == "cume" %>
-          <%= render "data_explorer/time_series/results" %>
+          <%= render "data_explorer/cume/results" %>
         <% end %>
       <% end %>
     </div>
