Improve handling out-of-order groups

--- a/app/views/data_explorer/_composition_errors.html.erb
+++ b/app/views/data_explorer/_composition_errors.html.erb
@@ -19,7 +19,7 @@
     <% end %>
 
     <% @composition.try(:groups)&.each do |group| %>
-      <% group.errors.full_messages.each do |msg| %>
+      <% group&.errors&.full_messages&.each do |msg| %>
         <li><%= group.dimension %> group: <%= msg %></li>
       <% end %>
     <% end %>
