--- a/app/views/data_explorer/time_series/_comparison_chooser.html.erb
+++ b/app/views/data_explorer/time_series/_comparison_chooser.html.erb
@@ -11,5 +11,5 @@
     <% end %>
   </select>
 
-  <input name="compare-lookback" value="<%= compare.try(:lookback) %>">
+  <input name="compare-lookback" placeholder="Num. of comparisons" value="<%= compare.try(:lookback) %>">
 </fieldset>
