--- a/app/views/data_explorer/time_series/_granularity_chooser.html.erb
+++ b/app/views/data_explorer/time_series/_granularity_chooser.html.erb
@@ -11,6 +11,6 @@
 
   <fieldset id="window">
     <%= form.label :window, "Window" %>
-    <%= form.text_field :window, name: "window", class: "foo", value: to_duration_shorthand(@composition.try(:window)), data: {"data-explorer--composition-url-target": "granularityWindow"} %>
+    <%= form.text_field :window, name: "window", placeholder: "10h, 48h, 1D, 5D, etc", value: to_duration_shorthand(@composition.try(:window)), data: {"data-explorer--composition-url-target": "granularityWindow"} %>
   </fieldset>
 </fieldset>
