Update interval header attributes

--- a/app/views/data_explorer/time_series/results/table/_10_interval_headers.html.erb
+++ b/app/views/data_explorer/time_series/results/table/_10_interval_headers.html.erb
@@ -7,8 +7,7 @@
     <% partial = (idx == 0 && @composition.warnings.added?(:from, :first_interval_out_of_range)) || (idx == (@composition.results.unique_interval_descriptors.size - 1) && @composition.warnings.added?(:to, :last_interval_out_of_range)) %>
 
     <th
-      data-member-descriptor="<%= interval_descriptor %>"
-      data-member-label="<%= interval_label(@composition, interval_descriptor) %>"
+      data-dx-interval-descriptor="<%= interval_descriptor %>"
       <%= html_attributes(class: "partial" ) if partial %>
       colspan="<%= @tbl_cols_per_interval %>">
       <%= interval_label(@composition, interval_descriptor) %>
