--- a/app/queries/bigquery/dimensional.sql.erb
+++ b/app/queries/bigquery/dimensional.sql.erb
@@ -48,7 +48,7 @@ WITH
 downloads_in_range AS (
   SELECT <%= downloads_table_columns.join(", ") %>
 
-  FROM production.dt_downloads AS downloads
+  FROM <%= ENV.fetch("BIGQUERY_DATASET", "staging") %>.dt_downloads AS downloads
 
   WHERE
     downloads.timestamp >= range_start AND downloads.timestamp < range_end
@@ -60,7 +60,7 @@ downloads_in_range AS (
 ,impressions_in_range AS (
   SELECT <%= impressions_table_columns.join(", ") %>
 
-  FROM production.dt_impressions AS impressions
+  FROM <%= ENV.fetch("BIGQUERY_DATASET", "staging") %>.dt_impressions AS impressions
 
   WHERE
     impressions.timestamp >= range_start AND impressions.timestamp < range_end
